--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "client/*"
+    ]
   }
 }
