--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
+    "react-pan-and-zoom-hoc": "^2.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "tone": "^13.4.9"
