--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
+    "react-bodymovin": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-router-dom": "^5.0.1",
