--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-bodymovin": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "tone": "^13.4.9"
